--- a/src/style.css
+++ b/src/style.css
@@ -3,44 +3,70 @@
     margin: 0;
     padding: 0;
     text-align: center;
-    border: 1px solid red;
 }
 
-html {
+html, body, #content, ul {
     display: flex;
+}
+
+html, #content {
     justify-content: center;
+}
+
+body, #content {
+    flex-direction: column;
 }
 
 body {
     width: 75vw;
-    height: 100vw;
+    height: 100vh;
     background-color: #f2f7f5;
     font-family: Arial, Helvetica, sans-serif;
     color: #475d5b;
 }
 
-h1, h2 {
+header, ul {
+    margin: 1rem 0;
+}
+
+h1, h2, li {
     color: #00473e;
 }
 
 #content {
-    display: flex;
-    flex-direction: column;
+    align-items: center;
+}
+
+#content>p {
+    width: 50%;
+}
+
+img {
+    width: 25%;
+    margin: 1rem 0;
 }
 
 ul {
     list-style: none;
-    display: flex;
     justify-content: space-around;
 }
 
 li {
-    color: #00473e;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 1.1rem;
+    width: 20%;
+    min-width: fit-content;
 }
 
-.active {
+li:hover, .active {
     text-decoration: underline;
+}
+
+table {
+    border-spacing: 2rem 0.5rem;
+}
+
+td {
+    text-align: left;
 }
